--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
         <div class="diagonal"></div>
      </div>
-     <h1>Kosovo je srce Srbije</h1>
+      <button>Test me</button>
+      <h1>NEw stuff</h1>
   </body>
 </html>
