Added new Div section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
 
         <div class="diagonal"></div>
      </div>
-      <button>Test me</button>
-       <h1>Sada cu da nestanem brate !</h1>
+
+     <div>
+         <h1>Explore more about our softwere</h1>
+         <a href="#">Click here</a>
+     </div>
+     
   </body>
 </html>
