--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@
 
         <div class="diagonal"></div>
      </div>
-<<<<<<< HEAD
+     
+     <div>
+         <h1>Explore our new Features</h1>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque minima aliquam asperiores nostrum ducimus, ab, architecto distinctio accusamus, veritatis amet neque dolor harum atque aut consequatur recusandae ea earum voluptates!
+         Ex doloribus assumenda blanditiis iure magnam mollitia odio repellendus reiciendis ducimus. Quis vero illo ex quae odio, labore aperiam! Magnam temporibus dicta quaerat rem, est inventore delectus voluptas ut dolore!
+         Numquam optio nisi dolore doloremque qui cumque, non dignissimos commodi doloribus deserunt autem perspiciatis nobis, molestiae illo impedit accusamus tempora rem deleniti perferendis asperiores! Reprehenderit consequatur dolorum corrupti labore inventore.
+         Saepe, voluptatibus in delectus dicta quibusdam esse officiis distinctio asperiores nostrum soluta ab eligendi temporibus expedita sapiente qui provident, quos enim nobis vitae minus? Nam corporis voluptates voluptatum laborum aliquam.</p>
+     </div>
+      
 
-=======
-      <button>Test me</button>
-       <h1>Sada cu da nestanem brate !</h1>
->>>>>>> parent of 7ae9bf4 (Added new Div section)
   </body>
 </html>
